# netheril

./: .envrc  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  build.rs  deny.toml  flake.nix
.direnv/: flake-profile-1-link
.github/workflows/: test-and-build.yml
src/: app.rs  cli.rs  error.rs  lib.rs  logging.rs  main.rs  version.rs
src/actor/: mailbox.rs  mod.rs
src/actors/: mod.rs  operations_scheduler.rs
src/api/: health_controller.rs  mod.rs  operations_controller.rs  pods_controller.rs  root_controller.rs
src/domains/: mod.rs
src/domains/health/: mod.rs
src/domains/pod/: mod.rs
src/models/: mod.rs
src/models/operation/: mod.rs
src/operation/: error.rs  mod.rs  monitor.rs  operation.rs  operation_model.rs  sentinel.rs  states.rs  transaction.rs
src/operations/: mod.rs  operation.rs
src/pod/: mod.rs
src/services/: mod.rs  operation_service.rs  pod_service.rs
tests/: integration_test.rs
tests/api/: health_controller_test.rs  mod.rs  root_controller_test.rs
tests/common/: mod.rs
