[package]
name = "netheril"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
clap = { version = "4.5.30", features = ["cargo"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
