[package]
name = "netheril"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["http2"] }
clap = { version = "4.5.30", features = ["cargo"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
vergen-git2 = { version = "1.0.5", features = ["build"] }