[package]
name = "netheril"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["http2", "macros"] }
bollard = "0.18.1"
chrono = {version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.30", features = ["cargo"] }
futures-util = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = {version = "1.0.139", features = ["raw_value"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

[build-dependencies]
vergen-git2 = { version = "1.0.5", features = ["build"] }

[dev-dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
